--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Comforter&family=Raleway&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -5,6 +6,28 @@
 }
 body{
     background-color: rgb(231, 212, 198);
+    font-family: 'Raleway', sans-serif;
+    font-size: 15px;
+    color: #707070;
+}
+.bt-btn{
+    border: 1px;
+    border-style: solid;
+    border-color: transparent;
+    font-size: 10px;
+    background-color: #ffe50f;
+    text-transform: uppercase;
+    letter-spacing: 4px;  
+    padding: 18px 36px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    
+}
+.bt-btn:hover{
+    border: 1px solid #ffe50f;
+    background-color: rgb(56, 52, 59);
+    color: #ffe50f;
+    
 }
 
 .hero-section{
@@ -16,7 +39,7 @@ body{
     margin-left: auto;
 }
 .menu-icon span{
-  background-color: rgb(217, 238, 98);
+  background-color: #ffe50f;
   height: 2px;
   margin-bottom: 3px;
   display: block;
@@ -33,6 +56,7 @@ body{
 /* Hero */
 .hero{
     height: 400px;
+    position: relative;
 }
 
 .hero .row{
@@ -40,4 +64,64 @@ body{
 }
 .hero-content{
     height: 100%;
+    color: white;
+}
+.hero-content h1{
+    font-size: 20px;
+    letter-spacing: 20px;
+    margin-bottom: 25px;
+
+}
+.hero-content p{
+ margin-bottom: 35px;  
+ font-size: 13px;
+ color: white;
+}
+
+.hero .arrwo-down{
+    position: absolute;
+    bottom: 16px;
+    left: 50%;
+    transform: translateX(-50%);
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+.hero .arrwo-down:hover{
+    bottom: 22px;
+}
+/* ABOUT */
+.about {
+    padding: 100px 0;
+    background-color: #fff;
+}
+.about img {
+    margin-bottom: 60px;
+}
+
+.services {
+    background-color: #f4f4f4;
+    padding-top: 80px;
+}
+.heading {
+    margin-bottom: 80px;
+}
+.heading img {
+    margin-bottom: 30px;
+}
+.heading h2 {
+    margin-bottom: 25px;
+    color: #1b1b1b;
+    font-size: 20px;
+    letter-spacing: 12px;
+}
+
+/* SERVICE */
+.service-card {
+    background-color: #fff;
+    padding: 35px 20px 20px;
+    margin-bottom: 25px;
+}
+.service-card-footer {
+    background-color: #fff;
+    padding: 20px;
 }
