--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 body{
-    background-color: rgb(143, 182, 216);
+    /* background-color: rgb(143, 182, 216); */
     font-family: 'Raleway', sans-serif;
     font-size: 15px;
     color: #707070;
@@ -155,4 +155,37 @@ body{
 .projects-card p{
     font-size: 13px;
     margin-bottom: 0;
+}
+/* protfolio */
+.portfolio{
+    padding-top: 50px;
+}
+.portfolio-name{
+    border-top: 1px solid #1b1b1b;
+    border-bottom: 1px solid #1b1b1b;
+    font-size: 13px;
+    color: #1b1b1b;
+    font-weight: 500;
+}
+.portfolio-card img{
+    width: 100%;
+    height: 500px;
+}
+.portfolio-card{
+    transition: all 0.5s ease-in-out;
+}
+.hover-content{
+   visibility: hidden;
+}
+.portfolio-card:hover .hover-content{
+  visibility: visible;
+}
+.hover-content{
+    font-size: 13px;
+    font-weight: 500;
+}
+.hover-content p{
+    font-size: 12px;
+    line-height: 1.5;
+    
 }
